added another line to the hellos from kjrsten

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <h1>This is a Test</h1>
       <p>This is a Test.</p>
       <p>Hi from Kjrsten</p>
+      <p>Hello from the second demo!</p>
       <p>Hi from Kjrsten on the same branch still</p>
       <p>Hello from tyson</p>
       <p>Hello again from tyson</p>
