--- a/index.html
+++ b/index.html
@@ -13,20 +13,12 @@
     <link rel="stylesheet" href="styles.css" />
     <title>MPLS CR8V 2025</title>
   </head>
-  <body>
+  <body class="d-flex flex-column min-vh-100 justify-content-center">
     <div id="header"></div>
     <!--this is a test for our includes folder-->
 
-    <main class="flex-grow-1">
-      <h1>This is a Test</h1>
-      <p>This is a Test.</p>
-      <p>Hi from Kjrsten</p>
-      <p>Hello from the second demo!</p>
-      <p>Hi from Kjrsten on the same branch still</p>
-      <p>Hello from tyson</p>
-      <p>Hello again from tyson</p>
-      <p>Tony is testing</p>
-      <p>Salahs new branch</p>
+    <main>
+
     </main>
 
     <!-- This is our Jquery and Bootstrap5 Script, last it our JS for includes -->
