Resolved merge conflicts

--- a/index.html
+++ b/index.html
@@ -17,9 +17,21 @@
     <div id="header"></div>
     <!--this is a test for our includes folder-->
 
-    <main>
 
-    </main>
+   
+      <main class="flex-grow-1">
+        <h1>This is a Test</h1>
+        <p>This is a Test.</p>
+        <p>Hi from Kjrsten</p>
+        <p>Hi from Kjrsten on the same branch still</p>
+        <p>Hello from tyson</p>
+        <p>Hello again from tyson</p>
+        <p>Tony is testing</p>
+        <p>Salahs new branch</p>
+        <p>New test from Kjrsten!</p>
+</main>
+
+
 
     <!-- This is our Jquery and Bootstrap5 Script, last it our JS for includes -->
     <script
@@ -35,3 +47,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+    </main>
