css changes in homepage-bg-idea only

--- a/homepage-bg-idea.html
+++ b/homepage-bg-idea.html
@@ -10,21 +10,23 @@
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <!-- <link rel="stylesheet" href="styles.css" /> -->
 
 <!-- ADDED STYLE EXPERIMENTS FROM KJRSTEN -->
 <style>
+nav {
+  background-color: orange;
+}
 body {
-    background-color: purple;
     background-image: url(images/purple-green.jpg);
-    background-size: cover;
+    background-size: contain;
     background-repeat: repeat-y;
 }
 main {
     background-image: url(images/smaller-background.jpg);
     background-repeat: repeat-y;
     background-position: top;
-    background-size: cover;
+    background-size: contain;
     max-width: 1400px;
     height: 100%;
     margin: 0 auto;
@@ -89,4 +91,3 @@ main {
     <script src="script.js"></script>
   </body>
 </html>
-    </main>
