--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   </head>
   <!------------------------------------------    End of Head    ------------------------------------------>
   <body class="justify-content-center">
-
     <main>  
           <!--Include of Header-->
     <div id="header"></div>
@@ -23,8 +22,36 @@
       <div class="container-sm">
 
           <div class="row">
-              <div class="col-sm-2 col-xs-1">
-                <!-- Empty space for background images -->
+            
+              <div class="container-fluid">
+   <!--paper scrap background-->
+   <div style="width: 100%;">
+    <div class="row w-100 justify-content-center"> 
+      <!--Information-->
+      <div id="info" class="d-flex flex-column mx-auto w-100 justify-content-center align-items-center" style="transform: rotate(-5deg);"> 
+        <div class="row justify-content-center align-items-center">
+        </div>
+        <div class="d-flex flex-column justify-content-start p-5">
+          <div class="mx-5">
+            <p >Please join us for our virtual receptions! Our talented graduates will present and discuss their work for friends, family and fans.</p>
+          </div>
+          <div class="mx-5">
+            <strong>
+              <p >6-7 p.m. Tuesday May 6<br>
+              1-2 p.m. Wednesday May 7</p>
+            </strong>
+          </div>
+          <div class="m-5">
+            <strong>
+             <p > Join the Zoom: PlaceholderForZoomLink<br>
+              Zoom ID: XXX XXX XXXX<br>
+              Password: mpls2025</p>
+            </strong>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
               </div>
               <div class="col-sm-8 col-xs-10">
                 <!-- Content here -->
@@ -32,6 +59,7 @@
                   <!------------------------------------------    ABOUT THE SHOW SECTION    ------------------------------------------>
 
     <section class="about">
+      <div class="container-fluid">
       <div class="title"><h2>ABOUT THE SHOW</h2></div>
       <div class="about-wrapper py-5">
         <img class="abt-img col-12 col-md-8" src="images/about-img.png" alt="about image" />
@@ -45,6 +73,7 @@
           mollit anim id est laborum.
         </p>
       </div>
+    </div>
     
 
 <!--
